# bromine.rh

./: .gitignore  Cargo.toml  flake.nix
src/: app.rs  bash.rs  config.rs  main.rs  menu.rs  types.rs  ui.rs
